[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/health_bar/health_bar_over.png" type="Texture" id=1]
[ext_resource path="res://key_scenes/health_bar/HealthBar.gd" type="Script" id=2]
[ext_resource path="res://art/health_bar/health_bar_under.png" type="Texture" id=3]
[ext_resource path="res://art/health_bar/health_bar_progress.png" type="Texture" id=4]

[node name="HealthBar" type="Control"]
script = ExtResource( 2 )

[node name="HealthBarUnder" type="TextureProgress" parent="."]
margin_left = -18.0
margin_top = -3.0
margin_right = 684.0
margin_bottom = 99.0
rect_scale = Vector2( 0.05, 0.06 )
texture_under = ExtResource( 3 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.894118, 0.0745098, 0.0745098, 1 )

[node name="HealthBarOver" type="TextureProgress" parent="."]
margin_left = -18.0
margin_top = -3.0
margin_right = 684.0
margin_bottom = 99.0
rect_scale = Vector2( 0.05, 0.06 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.0352941, 0.694118, 0.156863, 1 )

[node name="HealthUpdateTween" type="Tween" parent="."]
